  open(2) system call. (Mikko)
- Added "dechunk" filter which can decode HTTP responses with chunked
  transfer-encoding. HTTP streams use this filter automatically in case
  "Transfer-Encoding: chunked" header presents in response. It's possible to
  disable this behaviour using "http"=>array("auto_decode"=>0) in stream
  context. (Dmitry)

- Fixed bug #47880 (crashes in call_user_func_array()). (Dmitry)
- Fixed bug #47856 (stristr() converts needle to lower-case). (Ilia)
- Fixed bug #47851 (is_callable throws fatal error). (Dmitry)
- Fixed bug #47819 (Getting pdo_mysql.so: undefined symbol: mysqlnd_debug_init
  at startup). (Johannes)
- Fixed bug #47816 (pcntl tests failing on NetBSD). (Matteo)
- Fixed bug #47779 (Wrong value for SIG_UNBLOCK and SIG_SETMASK constants).
  (Matteo)
- Fixed bug #47771 (Exception during object construction from arg call calls
  object's destructor). (Dmitry)
- Fixed bug #47745 (FILTER_VALIDATE_INT doesn't allow minimum integer).
  (Dmitry)
- Fixed bug #47714 (autoloading classes inside exception_handler leads to
  crashes). (Dmitry)
- Fixed bug #47699 (autoload and late static binding). (Dmitry)
- Fixed bug #47662 (Support more than 127 subpatterns in preg_match). (Nuno)
- Fixed bug #47596 (Bus error on parsing file). (Dmitry)
- Fixed bug #47560 (explode()'s limit parameter odd behaviour). (Matt)
- Fixed bug #47535 (Compilation failure in ps_fetch_from_1_to_8_bytes()).
  (Johannes)
- Fixed bug #47516 (nowdoc can not be embed in heredoc but can be embed in
  double quote). (Dmitry)
- Fixed bug #47038 (Memory leak in include). (Dmitry)
- Fixed bug #47021 (SoapClient stumbles over WSDL delivered with
  "Transfer-Encoding: chunked"). (Dmitry)
- Fixed bug #46108 (DateTime - Memory leak when unserializing). (Felipe)
- Fixed bug #44861 (scrollable cursor don't work with pgsql). (Matteo)
- Fixed bug #44409 (PDO::FETCH_SERIALIZE calls __construct()). (Matteo)
- Fixed bug #44173 (PDO->query() parameter parsing/checking needs an 